--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,13 @@
+Bien sûr ! Voici la traduction en français :
+
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
 
-## What is Nextra?
+Bienvenue sur Nextra ! Il s'agit d'un modèle de documentation de base. Vous pouvez l'utiliser comme point de départ pour votre propre projet :)
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Qu'est-ce que Nextra ?
+
+Un framework de génération de site **simple**, **puissant** et **flexible** avec tout ce que vous aimez de Next.js.
 
 ## Documentation
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+La documentation est disponible sur [https://nextra.site](https://nextra.site).
