--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,13 +1,13 @@
-Bien sûr ! Voici la traduction en français :
-
 # Introduction
 
-Bienvenue sur Nextra ! Il s'agit d'un modèle de documentation de base. Vous pouvez l'utiliser comme point de départ pour votre propre projet :)
+Bienvenue sur la documentation de PaPi ! Ce site est conçu pour vous fournir toutes les informations nécessaires concernant les ressources FiveM que je développe. Vous y trouverez des guides détaillés, des instructions d'installation et des exemples pour vous aider à intégrer facilement mes ressources à votre serveur FiveM.
 
-## Qu'est-ce que Nextra ?
+**Veuillez noter que la documentation est en constante amélioration.** Certaines sections peuvent évoluer au fil du temps et être mises à jour en fonction des nouvelles fonctionnalités et versions des ressources. Si la version finale d'une ressource n'est pas encore disponible, des mises à jour seront ajoutées régulièrement pour vous tenir informé des changements à venir.
 
-Un framework de génération de site **simple**, **puissant** et **flexible** avec tout ce que vous aimez de Next.js.
+## Qu'est-ce que PaPi ?
+
+PaPi est une série de ressources FiveM **simples**, **flexibles** et **puissantes**, destinées à améliorer l'expérience de développement et de gestion de votre serveur. Chaque ressource est pensée pour être facile à utiliser tout en offrant des fonctionnalités avancées pour répondre à vos besoins.
 
 ## Documentation
 
-La documentation est disponible sur [https://nextra.site](https://nextra.site).
+La documentation complète pour toutes mes ressources est disponible ici, avec des explications détaillées pour vous guider à travers chaque étape de l'intégration et de l'utilisation des ressources.
