--- a/pages/advanced/satori.mdx
+++ b/pages/advanced/satori.mdx
@@ -1,3 +1,3 @@
 # Satori
 
-Satori (悟り) is a Japanese Buddhist term for awakening, "comprehension; understanding".
+Le terme **Satori** (悟り) est un concept bouddhiste japonais qui signifie **éveil**, **compréhension**, ou **compréhension profonde**. Il fait référence à un état d'illumination ou de perception claire, souvent associé à la réalisation de la vérité ultime dans la pratique du zen.
